[package]
name = "actix-middleware-etag"
description = "ETag middleware for Actix web >= 4.8"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/chriswk/actix-middleware-etag"
homepage = "https://github.com/chriswk/actix-middleware-etag"
authors = ["Christopher Kolstad <rust@chriswk.no>"]
license = "MIT"

[dependencies]
actix-service = "2.0.2"
actix-web = { version = "4.8.0", default-features = false }
base64 = "0.22.1"
futures = "0.3.30"
str-buf = "3.0.2"
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }

[dev-dependencies]
actix-web = { version = "4.8.0", default-features = false, features = [
    "macros",
    "compress-gzip",
    "compress-zstd",
] }
